theme edits requested by Diane

--- a/html/dogs.html
+++ b/html/dogs.html
@@ -109,17 +109,17 @@
       </div>
     </section>
 
-    <section class="row no-gutters p-0 bg-dark flex-row-reverse">
+    <section class="row no-gutters p-0 bg-dark2 flex-row-reverse">
       <div id="Rio" class="col-md-5 col-xl-6 d-flex flex-column order-md-2">
         <img src="assets/img/rio.jpg" alt="Image" class="flex-grow-1">
       </div>
       <div class="col-md-7 col-xl-6 order-md-1 height-60 height-md-70">
         <div class="row w-100 no-gutters justify-content-center py-4">
           <div class="col-md-10 col-lg-9 col-xl-8 p-3">
-            <h1 class="display-4 display-4 text-white">Rio</h1>
-            <h2 class="lead text-white">AKC Moyen Poodle</h2>
-            <hr class="bg-white">
-            <p class="lead text-white text-justify">Rio is our very red Moyen Poodle that will be the sire for Maiva's litter. He is charming and has an easy-going personality! Rio is very smart, and lives to please. We are hoping he passes his amazing temperament on to his puppies. He has a beautiful deep red coat.</p>
+            <h1 class="display-4 display-4 text-dark">Rio</h1>
+            <h2 class="lead text-dark">AKC Moyen Poodle</h2>
+            <hr class="bg-dark-hr">
+            <p class="lead text-dark text-justify">Rio is our very red Moyen Poodle that will be the sire for Maiva's litter. He is charming and has an easy-going personality! Rio is very smart, and lives to please. We are hoping he passes his amazing temperament on to his puppies. He has a beautiful deep red coat.</p>
           </div>
         </div>
       </div>
@@ -200,30 +200,32 @@
       </div>
     </section>
     
-    <footer class="spacer-y-3 bg-dark">
+    <footer class="spacer-y-3 bg-gradient">
       <div class="container">
         <div class="row">
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">How to Adopt?</h5>
+            <h5 class="text-dark">How to Adopt?</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="puppies.html" class="text-white">Available Puppies</a></li>
-              <li class="py-0 py-md-1"><a href="adopt.html" class="text-white">How To Adopt?</a></li>
-              <li class="py-0 py-md-1"><a href="contact.html" class="text-white">Contact Us</a></li>
+              <li class="py-0 py-md-1"><a href="puppies.html" class="text-dark">Available Puppies</a></li>
+              <li class="py-0 py-md-1"><a href="adopt.html" class="text-dark">How To Adopt?</a></li>
+              <li class="py-0 py-md-1"><a href="contact.html" class="text-dark">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">About Us</h5>
+            <h5 class="text-dark">About Us</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="about.html" class="text-white">Our Story</a></li>
-              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-white">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="about.html" class="text-dark">Our Story</a></li>
+              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-dark">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="gallery.html" class="text-dark">Gallery</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">Resources</h5>
+            <h5 class="text-dark">Resources</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-white">Early Neurological Stimulation</a></li>
-              <li class="py-0 py-md-1"><a href="prepare.html" class="text-white">Preparing For Your Puppy</a></li>
-              <li class="py-0 py-md-1"><a href="faq.html" class="text-white">FAQ</a></li>
+              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-dark">Early Neurological Stimulation</a></li>
+              <li class="py-0 py-md-1"><a href="prepare.html" class="text-dark">Preparing For Your Puppy</a></li>
+              <li class="py-0 py-md-1"><a href="food.html" class="text-dark">Life's Abundance Pet Food</a></li>
+              <li class="py-0 py-md-1"><a href="faq.html" class="text-dark">FAQ</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
@@ -237,12 +239,12 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo-white.svg" style="height: 200px">
+            <img src="assets/img/logo.svg" style="height: 300px">
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <span class="text-small text-white opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
+            <span class="text-small text-dark opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
           </div>
         </div>
       </div>
