--- a/html/puppies.html
+++ b/html/puppies.html
@@ -120,29 +120,29 @@
       </div>
     </section>
     
-    <section class="bg-dark">
+    <section class="bg-dark2">
       <div class="container py-3">
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-0">
-              <span class="h2 d-block text-white">F1B Mini/Medium Red Goldendoodles</span>
+              <span class="h2 d-block text-dark">F1B Mini/Medium Red Goldendoodles</span>
               <ul>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Parents:</strong><span> Mavia &amp; Rio</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Birth:</strong><span> April 15, 2020</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Take Home:</strong><span> June 13, 2020</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 32-35 lbs.</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Colors:</strong><span> Medium Red to Dark Red</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
                 </li>
               </ul>
@@ -153,7 +153,7 @@
                 <img class="card-img flex-lg-grow-1" src="assets/img/willow.jpg" alt="Maiva" />
               </div>
               <div class="d-lg-flex">
-                <p class="h3 text-white">Willow<span class="lead"> - F1 Goldendoodle</span></p>
+                <p class="h3 text-dark">Willow<span class="lead"> - F1 Goldendoodle</span></p>
               </div>
           </div>
           <div class="col-lg-4">
@@ -161,33 +161,35 @@
                 <img class="card-img flex-lg-grow-1" src="assets/img/rio.jpg" alt="Rio" />
               </div>
               <div class="d-lg-flex">
-                <p class="h3 text-white">Rio<span class="lead"> - AKC Moyen Poodle</span></p>
+                <p class="h3 text-dark">Rio<span class="lead"> - AKC Moyen Poodle</span></p>
               </div>
           </div>
         </div>
+        <hr class="bg-dark-hr">
       </div>
-      <div class="container py-3">
+      
+      <div class="container ">
         <div class="row">
           <div class="col align-self-center mb-3 mb-lg-0">
             <div class="pr-lg-0">
-              <span class="h2 d-block text-white">F1 Mini/Medium Red Goldendoodles</span>
+              <span class="h2 d-block text-dark">F1 Mini/Medium Red Goldendoodles</span>
               <ul>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Parents:</strong><span> Mavia &amp; Rio</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Birth:</strong><span> June 29, 2020</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Take Home:</strong><span> August 25, 2020</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Est. Adult Weight:</strong><span> 42-47 lbs.</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Colors:</strong><span> Tan, Light Red</span></p>
                 </li>
-                <li class= "lead mb-1 text-white">
+                <li class= "lead mb-1 text-dark">
                   <p><strong>Status:</strong><span class="text-success"><strong> TAKING DEPOSITS</strong></span></p>
                 </li>
               </ul>
@@ -198,7 +200,7 @@
                 <img class="card-img flex-lg-grow-1" src="assets/img/maiva.jpg" alt="Maiva" />
               </div>
               <div class="d-lg-flex">
-                <p class="h3 text-white">Mavia<span class="lead"> - AKC English Retriever</span></p>
+                <p class="h3 text-dark">Mavia<span class="lead"> - AKC English Retriever</span></p>
               </div>
           </div>
           <div class="col-lg-4">
@@ -206,7 +208,7 @@
                 <img class="card-img flex-lg-grow-1" src="assets/img/rio.jpg" alt="Rio" />
               </div>
               <div class="d-lg-flex">
-                <p class="h3 text-white">Rio<span class="lead"> - AKC Moyen Poodle</span></p>
+                <p class="h3 text-dark">Rio<span class="lead"> - AKC Moyen Poodle</span></p>
               </div>
           </div>
         </div>
@@ -365,30 +367,32 @@
       </div>
     </section>
 
-    <footer class="spacer-y-3 bg-dark">
+    <footer class="spacer-y-3 bg-gradient">
       <div class="container">
         <div class="row">
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">How to Adopt?</h5>
+            <h5 class="text-dark">How to Adopt?</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="puppies.html" class="text-white">Available Puppies</a></li>
-              <li class="py-0 py-md-1"><a href="adopt.html" class="text-white">How To Adopt?</a></li>
-              <li class="py-0 py-md-1"><a href="contact.html" class="text-white">Contact Us</a></li>
+              <li class="py-0 py-md-1"><a href="puppies.html" class="text-dark">Available Puppies</a></li>
+              <li class="py-0 py-md-1"><a href="adopt.html" class="text-dark">How To Adopt?</a></li>
+              <li class="py-0 py-md-1"><a href="contact.html" class="text-dark">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">About Us</h5>
+            <h5 class="text-dark">About Us</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="about.html" class="text-white">Our Story</a></li>
-              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-white">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="about.html" class="text-dark">Our Story</a></li>
+              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-dark">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="gallery.html" class="text-dark">Gallery</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">Resources</h5>
+            <h5 class="text-dark">Resources</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-white">Early Neurological Stimulation</a></li>
-              <li class="py-0 py-md-1"><a href="prepare.html" class="text-white">Preparing For Your Puppy</a></li>
-              <li class="py-0 py-md-1"><a href="faq.html" class="text-white">FAQ</a></li>
+              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-dark">Early Neurological Stimulation</a></li>
+              <li class="py-0 py-md-1"><a href="prepare.html" class="text-dark">Preparing For Your Puppy</a></li>
+              <li class="py-0 py-md-1"><a href="food.html" class="text-dark">Life's Abundance Pet Food</a></li>
+              <li class="py-0 py-md-1"><a href="faq.html" class="text-dark">FAQ</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
@@ -402,12 +406,12 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo-white.svg" style="height: 200px">
+            <img src="assets/img/logo.svg" style="height: 300px">
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <span class="text-small text-white opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
+            <span class="text-small text-dark opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
           </div>
         </div>
       </div>
