--- a/html/home.html
+++ b/html/home.html
@@ -157,18 +157,18 @@
       </div>
     </section>
     
-    <section class="bg-dark pt-md-4 pb-md-0">
-      <div class="container">
+    <section class="bg-dark2 pt-md-4 pb-md-0">
+      <div class="container py-3">
         <div class="row justify-content-around align-items-center flex-md-row-reverse">
           <div class="col-md col-lg-7">
             <div class="d-flex mb-3">
-              <i class="material-icons text-warning">star</i>
-              <i class="material-icons text-warning">star</i>
-              <i class="material-icons text-warning">star</i>
-              <i class="material-icons text-warning">star</i>
-              <i class="material-icons text-warning">star</i>
+              <i class="material-icons text-warning badge-lg">star</i>
+              <i class="material-icons text-warning badge-lg">star</i>
+              <i class="material-icons text-warning badge-lg">star</i>
+              <i class="material-icons text-warning badge-lg">star</i>
+              <i class="material-icons text-warning badge-lg">star</i>
             </div>
-            <span class="h4 d-block text-white text-justify">&ldquo;Chip has been such a great addition to our family! He is the sweetest dog and so kind and gentle with our kids. He is so energetic and always so happy to see us. We love him so much! Thanks Diane!&rdquo; - Lisa B</span>
+            <span class="h4 d-block text-dark text-justify">&ldquo;Chip has been such a great addition to our family! He is the sweetest dog and so kind and gentle with our kids. He is so energetic and always so happy to see us. We love him so much! Thanks Diane!&rdquo; - Lisa B</span>
             <span><a href="testimonials.html">Read More Testimonials</a></span>
           </div>
           <div class="col-3 mt-md-4 mt-lg-0">
@@ -178,11 +178,11 @@
       </div>
     </section>
     
-    <section class="pb-5 bg-dark">
+    <section class="pb-5 bg-dark2">
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <span class="h1 text-white">What comes with your puppy?</span>
+            <span class="h1 text-dark">What comes with your puppy?</span>
           </div>
         </div>
       </div>
@@ -257,30 +257,32 @@
       </div>
     </section>
 
-    <footer class="spacer-y-3 bg-dark">
+    <footer class="spacer-y-3 bg-gradient">
       <div class="container">
         <div class="row">
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">How to Adopt?</h5>
+            <h5 class="text-dark">How to Adopt?</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="puppies.html" class="text-white">Available Puppies</a></li>
-              <li class="py-0 py-md-1"><a href="adopt.html" class="text-white">How To Adopt?</a></li>
-              <li class="py-0 py-md-1"><a href="contact.html" class="text-white">Contact Us</a></li>
+              <li class="py-0 py-md-1"><a href="puppies.html" class="text-dark">Available Puppies</a></li>
+              <li class="py-0 py-md-1"><a href="adopt.html" class="text-dark">How To Adopt?</a></li>
+              <li class="py-0 py-md-1"><a href="contact.html" class="text-dark">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">About Us</h5>
+            <h5 class="text-dark">About Us</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="about.html" class="text-white">Our Story</a></li>
-              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-white">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="about.html" class="text-dark">Our Story</a></li>
+              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-dark">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="gallery.html" class="text-dark">Gallery</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">Resources</h5>
+            <h5 class="text-dark">Resources</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-white">Early Neurological Stimulation</a></li>
-              <li class="py-0 py-md-1"><a href="prepare.html" class="text-white">Preparing For Your Puppy</a></li>
-              <li class="py-0 py-md-1"><a href="faq.html" class="text-white">FAQ</a></li>
+              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-dark">Early Neurological Stimulation</a></li>
+              <li class="py-0 py-md-1"><a href="prepare.html" class="text-dark">Preparing For Your Puppy</a></li>
+              <li class="py-0 py-md-1"><a href="food.html" class="text-dark">Life's Abundance Pet Food</a></li>
+              <li class="py-0 py-md-1"><a href="faq.html" class="text-dark">FAQ</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
@@ -294,12 +296,12 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo-white.svg" style="height: 200px">
+            <img src="assets/img/logo.svg" style="height: 300px">
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <span class="text-small text-white opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
+            <span class="text-small text-dark opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
           </div>
         </div>
       </div>
