--- a/html/stimulation.html
+++ b/html/stimulation.html
@@ -185,30 +185,32 @@
       </div>
     </section>
 
-    <footer class="spacer-y-3 bg-dark">
+    <footer class="spacer-y-3 bg-gradient">
       <div class="container">
         <div class="row">
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">How to Adopt?</h5>
+            <h5 class="text-dark">How to Adopt?</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="puppies.html" class="text-white">Available Puppies</a></li>
-              <li class="py-0 py-md-1"><a href="adopt.html" class="text-white">How To Adopt?</a></li>
-              <li class="py-0 py-md-1"><a href="contact.html" class="text-white">Contact Us</a></li>
+              <li class="py-0 py-md-1"><a href="puppies.html" class="text-dark">Available Puppies</a></li>
+              <li class="py-0 py-md-1"><a href="adopt.html" class="text-dark">How To Adopt?</a></li>
+              <li class="py-0 py-md-1"><a href="contact.html" class="text-dark">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">About Us</h5>
+            <h5 class="text-dark">About Us</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="about.html" class="text-white">Our Story</a></li>
-              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-white">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="about.html" class="text-dark">Our Story</a></li>
+              <li class="py-0 py-md-1"><a href="testimonials.html" class="text-dark">Testimonials</a></li>
+              <li class="py-0 py-md-1"><a href="gallery.html" class="text-dark">Gallery</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3 mb-3 mb-md-0">
-            <h5 class="text-white">Resources</h5>
+            <h5 class="text-dark">Resources</h5>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-white">Early Neurological Stimulation</a></li>
-              <li class="py-0 py-md-1"><a href="prepare.html" class="text-white">Preparing For Your Puppy</a></li>
-              <li class="py-0 py-md-1"><a href="faq.html" class="text-white">FAQ</a></li>
+              <li class="py-0 py-md-1"><a href="stimulation.html" class="text-dark">Early Neurological Stimulation</a></li>
+              <li class="py-0 py-md-1"><a href="prepare.html" class="text-dark">Preparing For Your Puppy</a></li>
+              <li class="py-0 py-md-1"><a href="food.html" class="text-dark">Life's Abundance Pet Food</a></li>
+              <li class="py-0 py-md-1"><a href="faq.html" class="text-dark">FAQ</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
@@ -222,12 +224,12 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo-white.svg" style="height: 200px">
+            <img src="assets/img/logo.svg" style="height: 300px">
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <span class="text-small text-white opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
+            <span class="text-small text-dark opacity-50">&#xA9; 2020 Trails and Tails Doodles</span>
           </div>
         </div>
       </div>
