verified testimonial form

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -604,7 +604,7 @@
                     }
 
                     var reemail = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,6})?$/;
-                    if (!reemail.test($("#e-mail").val())) {
+                    if (!reemail.test($("#email").val())) {
                         alert ("Please enter valid email address");
                         return;
                     }
