--- a/html/home.html
+++ b/html/home.html
@@ -160,6 +160,9 @@
     <section class="bg-dark2 pt-md-4 pb-md-0">
       <div class="container py-3">
         <div class="row justify-content-around align-items-center flex-md-row-reverse">
+          <div class="col-sm-6 col-lg-3 mb-3 mb-sm-0">
+            <img class="d-md-block rounded-circle" src="assets/img/chip.jpg" alt="Image">
+          </div>
           <div class="col-md col-lg-7">
             <div class="d-flex mb-3">
               <i class="material-icons text-warning badge-lg">star</i>
@@ -170,9 +173,6 @@
             </div>
             <span class="h4 d-block text-dark text-justify">&ldquo;Chip has been such a great addition to our family! He is the sweetest dog and so kind and gentle with our kids. He is so energetic and always so happy to see us. We love him so much! Thanks Diane!&rdquo; - Lisa B</span>
             <span><a href="testimonials.html">Read More Testimonials</a></span>
-          </div>
-          <div class="col-3 mt-md-4 mt-lg-0">
-            <img class="d-none d-md-block rounded-circle" src="assets/img/chip.jpg" alt="Image">
           </div>
         </div>
       </div>
@@ -296,7 +296,9 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo.svg" style="height: 300px">
+            <a href="home.html">
+              <img src="assets/img/logo.svg" style="height: 300px">
+            </a>
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
