--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -550,7 +550,9 @@
         </div>
         <div class="row mt-3 mt-md-4 text-center">
           <div class="col">
-            <img src="assets/img/logo.svg" style="height: 300px">
+            <a href="home.html">
+              <img src="assets/img/logo.svg" style="height: 300px">
+            </a>
           </div>
         </div>
         <div class="row mt-3 mt-md-4 text-center">
