--- a/html/puppies.html
+++ b/html/puppies.html
@@ -236,9 +236,9 @@
           </div>
         </div>
       </div>
-      <div class="container py-5">
+      <div class="container">
         <div class="row justify-content-around">
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Green Boy</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -249,7 +249,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Blue Boy</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -260,7 +260,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Red Boy</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -272,8 +272,8 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-around py-3">
-          <div class="col-lg-4">
+        <div class="row justify-content-around">
+          <div class="col-lg-4 py-2">
             <h5>Pink Girl</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -284,7 +284,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Purple Girl</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -295,7 +295,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Yellow Girl</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -308,7 +308,7 @@
           </div>
         </div>
         <div class="row justify-content-around">
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Black Boy</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -319,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>White Girl</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
@@ -330,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 py-2">
             <h5>Orange Girl</h5>
             <div class="video-cover rounded">
               <!--<img alt="Image" src="assets/img/logo.svg" class="bg-image" />-->
