--- a/html/puppies.html
+++ b/html/puppies.html
@@ -95,7 +95,7 @@
     
     <section class="row no-gutters p-0">
       <div class="col-md-5 col-lg-6 d-flex flex-column order-md-2">
-        <img src="assets/img/puppies_header_sm.png" alt="Image" class="flex-grow-1">
+        <img src="assets/img/puppies_header_sm.jpg" alt="Image" class="flex-grow-1">
       </div>
       <div class="col-md-7 col-lg-6 d-flex bg-white order-md-1 align-items-center">
         <div class="row no-gutters justify-content-center py-md-4">
