gallery grid style and added up to 48 pictures

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -86,7 +86,7 @@
               Gallery
             </h1>
             <p class="lead mb-0 text-white">
-              <i>"Gallery Under Construction"</i>
+              <i>"Our gallery features recent uploads from our Instagram account."</i>
             </p>
           </div>
         </div>
@@ -101,108 +101,172 @@
       <div class="container py-4">
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img0" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img0" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img1" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img1" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img2" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img2" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img3" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img3" src="assets/img/nophotofound.png"/>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img4" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img4" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img5" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img5" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img6" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img6" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img7" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card-img flex-lg-grow-1" id="img7" src="assets/img/nophotofound.png"/>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img8" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img8" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img9" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img9" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img10" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img10" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img11" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img11" src="assets/img/nophotofound.png"/>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img12" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img12" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img13" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img13" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img14" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img14" src="assets/img/nophotofound.png"/>
           </div>
           <div class="col-12 col-md-3 card">
-            <img class="card-img opacity-90" id="img15" src="assets/img/card-image-background-1.jpg" alt="Small Business" />
-            <div class="card-img-overlay">
-              <span class="mb-0 h5 text-white">Small Business</span>
-            </div>
+            <img class="card" id="img15" src="assets/img/nophotofound.png"/>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img16" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img17" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img18" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img19" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img20" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img21" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img22" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img23" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img24" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img25" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img26" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img27" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img28" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img29" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img30" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img31" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img32" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img33" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img34" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img35" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img36" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img37" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img38" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img39" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img40" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img41" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img42" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img43" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img45" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img46" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img47" src="assets/img/nophotofound.png"/>
+          </div>
+          <div class="col-12 col-md-3 card">
+            <img class="card" id="img48" src="assets/img/nophotofound.png"/>
+          </div>
+        </div>        
       </div>
     </section>
 
@@ -211,7 +275,7 @@
         <div class="row justify-content-center">
           <div class="col col-12 text-center">
             <span class="d-block mb-3 h2">Want to see more cuteness?</span>
-            <a class="btn btn-primary btn-lg" href="https://www.instagram.com/trailsandtailsdoodles/">Visit Our Instagram</a>
+            <a class="btn btn-primary btn-lg" href="https://www.instagram.com/trailsandtailsdoodles/">Follow Us On Instagram</a>
           </div>
         </div>
       </div>
